--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <!-- Jackson for JSON serialization -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
